file(GLOB uio_sources *.cpp)
add_executable(uio ${uio_sources})
target_compile_features(uio PUBLIC cxx_std_20)
if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 10 AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 11)
  target_compile_options(uio PUBLIC "-fcoroutines")
endif()
target_link_libraries(uio smart crack crypt m)
target_compile_options(uio PUBLIC -I${CMAKE_SOURCE_DIR})
install(TARGETS uio RUNTIME DESTINATION bin COMPONENT tools)
